hphp/test/zend/good/Zend/tests/debug_info-error-resource.php.expectf

Fatal error: __debugInfo() must return an array in %s/debug_info-error-resource.php on line 14
